<resources>
    <string name="app_name">言传声教</string>
    <string name="title_home">教学对话</string>
    <string name="title_upload">语音生成</string>
    <string name="title_bluetooth">蓝牙控制</string>
    <string name="title_music">音频播放</string>
    <string name="title_files">文件管理</string>

    <string name="input_hint">输入消息</string>
    <string name="standard_voice">标准发声</string>
    <string name="answer_question">答疑解惑</string>
    <string name="internet_search">联网搜索</string>
    <string name="setting">对话设置</string>
    <string name="chat_playAudio">播放语音</string>
    <string name="chat_copy">复制内容</string>
    <string name="personalized">个性学习</string>
    <string name="analyse">薄弱分析</string>
    <string name="subjects">学科</string>

<!--    上传界面-->
    <string name="model">模型</string>
    <string name="emotion">情感</string>
    <string name="speed">语速</string>
    <string name="textFile">文本</string>
    <string name="audioFile">音频</string>
    <string name="chooseAudioFile">选择音频文件</string>
    <string name="chooseTextFile">选择文本文件</string>
    <string name="recordButton">录音按钮</string>
    <string name="upload">上传</string>
    <string name="uploadButton">上传按钮</string>
    <string name="noSelect">未选择</string>
    <string name="inputText">请输入文本</string>
    <string name="recordTime">录音时长：00:00:00</string>
    <string name="output">输出</string>
    <string name="output_video">视频</string>
    <string name="output_audio">音频</string>
    <string name="output_text">字幕</string>

<!--    蓝牙连接界面-->
    <string name="noConnect">未连接设备</string>
    <string name="scanBluetooth">扫描蓝牙</string>
    <string name="bluetoothList">蓝牙设备列表</string>

<!--    文件控制-->
    <string name="fullscreen">全屏</string>
    <string name="back">返回</string>
    <string name="selectDocument">选定目录</string>
    <string name="filesList">文件列表</string>

<!--    播放控制-->
    <string name="audplay">播放音频</string>
    <string name="audstop">停止音频</string>
    <string name="audlist">音频列表</string>
    <string name="audnext">下一首</string>
    <string name="audprev">上一首</string>
    <string name="dirback">返回目录</string>
    <string name="dispname">显示名称</string>
    <string name="mode">切换模式</string>
    <string name="pausresu">暂停/恢复</string>
    <string name="seekbwd">后退</string>
    <string name="seekfwd">前进</string>
    <string name="voludec">音量减小</string>
    <string name="voluinc">音量增加</string>
    <string name="mediaPlayer">音乐播放器图标</string>
    <string name="audioList">音频列表</string>

    <string name="no_audio_files">没有找到音频文件</string>
    <string name="loading">加载中…</string>
    <string name="error_occurred">发生错误</string>


</resources>