<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <item
        android:id="@+id/navigation_bluetooth"
        android:icon="@drawable/bluetooth"
        android:title="@string/title_bluetooth" />
    <item
        android:id="@+id/navigation_music"
        android:icon="@drawable/music"
        android:title="@string/title_music" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/chat2"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_upload"
        android:icon="@drawable/upload3"
        android:title="@string/title_upload" />

    <item
        android:id="@+id/navigation_files"
        android:icon="@drawable/files"
        android:title="@string/title_files" />

</menu>