<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white"
    android:padding="2dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@android:color/white"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:elevation="4dp"
        >

        <!-- 模型 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/white"
            android:elevation="2dp"
            android:gravity="start|center_vertical"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/model"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                />

            <Spinner
                android:id="@+id/spinner_model"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_border"
                android:minHeight="48dp"
                android:textSize="16sp"
                android:textColor="@color/black_200"
                android:padding="8dp" />
        </LinearLayout>

        <!-- 情感 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="start|center_vertical"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:background="@android:color/white"
            android:elevation="2dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/btn_emotion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emotion"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_marginEnd="16dp" />

            <Spinner
                android:id="@+id/spinner_emotion"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:textSize="16sp"
                android:textColor="@color/black_200"
                android:background="@drawable/spinner_border"
                android:padding="8dp" />
        </LinearLayout>

        <!-- 语速 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="start|center_vertical"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:background="@android:color/white"
            android:elevation="2dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/btn_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed"
                android:textSize="16sp"
                android:layout_marginEnd="16dp"
                android:textColor="@android:color/black"
                />

            <Spinner
                android:id="@+id/spinner_speed"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:background="@drawable/spinner_border"
                android:dropDownSelector="@android:color/darker_gray"
                android:padding="8dp"
                android:textSize="16sp"
                android:textColor="@color/black_200"
                />
        </LinearLayout>
        <!-- 输出 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:background="@android:color/white"
            android:elevation="2dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/btn_output"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/output"
                android:textSize="16sp"
                android:layout_marginEnd="16dp"
                android:textColor="@android:color/black" />

            <!-- 多个 CheckBox 来实现多选 -->
            <CheckBox
                android:id="@+id/output_option1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/output_audio"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_marginEnd="18dp"
                android:checked="true"/>

            <CheckBox
                android:id="@+id/output_option2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/output_video"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_marginEnd="18dp"/>
            <CheckBox
                android:id="@+id/output_option3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/output_text"
                android:textSize="16sp"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:background="@android:color/white"
            android:elevation="2dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:gravity="center"
                android:text="@string/audioFile"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:background="@android:color/white"
                    android:elevation="2dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"

                    android:radius="8dp">
                    <!-- 选择音频文件按钮 -->
                    <ImageButton
                        android:id="@+id/btn_choose_audio"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:backgroundTint="@android:color/transparent"
                        android:contentDescription="@string/chooseAudioFile"
                        android:elevation="2dp"
                        android:gravity="center"
                        android:radius="8dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/clickupload" />

                    <TextView
                        android:id="@+id/audioFileTextView_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/noSelect"
                        android:textColor="@color/grey_700"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:background="@android:color/white"
                    android:elevation="2dp"
                    android:gravity="center_vertical"
                    android:paddingStart="16dp"
                    android:paddingEnd="0dp"
                    >

                    <!-- 录音按钮 -->
                    <ImageButton
                        android:id="@+id/btn_record_audio"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:backgroundTint="@android:color/transparent"
                        android:contentDescription="@string/recordButton"
                        android:elevation="2dp"
                        android:gravity="center"
                        android:scaleType="centerInside"
                        android:src="@drawable/record" />

                    <!-- 录音计时器 -->
                    <TextView
                        android:id="@+id/recordingTimeTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recordTime"
                        android:textColor="@color/black_200"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:background="@android:color/white"
            android:elevation="2dp"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/textFile"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_marginEnd="12dp" />
            <!-- 选择文本文件按钮 -->
            <ImageButton
                android:id="@+id/btn_choose_file"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:gravity="center"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:backgroundTint="@android:color/transparent"
                android:scaleType="centerInside"
                android:src="@drawable/clickupload"
                android:elevation="2dp"
                android:contentDescription="@string/chooseTextFile"
                />
            <TextView
                android:id="@+id/textFileTextView_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/noSelect"
                android:textSize="16sp"
                android:textColor="@color/grey_700" />

        </LinearLayout>

        <!-- 输入框 -->
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:layout_marginTop="0dp"
            android:background="@android:color/white"
            android:elevation="2dp"
            android:radius="8dp">

            <EditText
                android:id="@+id/inputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:maxHeight="800dp"
                android:layout_margin="16dp"
                android:hint="@string/inputText"
                android:textSize="16sp"
                android:padding="12dp"
                android:background="@drawable/inputtext_border"
                android:scrollbars="vertical"
                android:inputType="textMultiLine"
                android:gravity="top|start"
                android:textColor="@android:color/black"
                android:elevation="1dp"
                android:radius="8dp" />
        </androidx.core.widget.NestedScrollView>

        <!-- 上传按钮 -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_upload"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:backgroundTint="@android:color/white"
            android:scaleType="centerInside"
            android:drawableEnd="@drawable/upload2"
            app:strokeColor="@color/light_blue_100"
            app:strokeWidth="1dp"
            android:layout_gravity="center"
            android:layout_marginTop="14dp"
            android:text="@string/upload"
            android:textColor="@color/black_200"
            android:textSize="18sp"
            android:contentDescription="@string/uploadButton"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>