<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- 聊天消息显示区域 -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chat_message_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:paddingVertical="4dp"
        android:scrollbars="none"
        android:overScrollMode="never"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/input_area" />

    <!-- 输入区域 -->
    <LinearLayout
        android:id="@+id/input_area"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/option_area">

        <!-- 语音输入按钮 -->
        <ImageButton
            android:id="@+id/voice_input_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/recordButton"
            android:src="@drawable/record"
            android:background="@android:color/transparent"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp" />

        <!-- 文字输入框 -->
        <EditText
            android:id="@+id/message_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/input_hint"
            android:padding="8dp"
            android:background="@drawable/inputtext_border"
            android:scrollbars="vertical"
            android:inputType="textMultiLine"
            android:gravity="top|start"
            android:textColor="@android:color/black"
            android:elevation="1dp"
            android:layout_marginEnd="4dp" />

    </LinearLayout>

    <!-- 选项和按钮区域 -->
    <LinearLayout
        android:id="@+id/option_area"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:padding="4dp">

            <ImageButton
                android:id="@+id/setting_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/setting"
                android:src="@drawable/setting"
                android:background="@android:color/transparent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="12dp" />


            <CheckBox
                android:id="@+id/output_option2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personalized"
                android:textSize="12sp"
                android:drawableStart="@drawable/internet"
                android:button="@drawable/custom_checkbox_1"
                android:background="@drawable/custom_checkbox_1"
                android:textColor="@android:color/black"
                android:padding="6dp"
                android:layout_marginEnd="8dp"
                android:checked="true"
                />
            <CheckBox
                android:id="@+id/output_option1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/analyse"
                android:button="@drawable/custom_checkbox_1"
                android:background="@drawable/custom_checkbox_1"
                android:textSize="12sp"
                android:drawableStart="@drawable/tip2"
                android:padding="6dp"
                android:textColor="@android:color/black"
                android:layout_marginEnd="8dp"
                />
        </LinearLayout>

        <!-- 文件按钮 -->
        <ImageButton
            android:id="@+id/more_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/chooseTextFile"
            android:src="@drawable/plus"
            android:background="@android:color/transparent"
            android:layout_marginEnd="8dp" />

        <!-- 发送按钮 -->
        <ImageButton
            android:id="@+id/send_button"
            android:layout_width="34dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:contentDescription="@string/upload"
            android:src="@drawable/arrow_up"
            android:background="@drawable/round_button"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>